--- a/views/contact.html
+++ b/views/contact.html
@@ -6,8 +6,8 @@
 			<a class="mail" href="mailto:martin.goutry@gmail.com">martin.goutry@gmail.com</a>
 			<p>Learn more about me on</p>
 			<div class="social">
-				<div class="icon-github"><a href="https://github.com/tjabbe" target="_blank">tjabbe</a></div>
-				<div class="icon-twitter"><a href="https://twitter.com/MGoutry" target="_blank">@MGoutry</a></div>
+				<div><a class="icon-github" href="https://github.com/tjabbe" target="_blank">tjabbe</a></div>
+				<div><a class="icon-twitter" href="https://twitter.com/MGoutry" target="_blank">@MGoutry</a></div>
 			</div>
 		</div>
 		<div class="col">
