--- a/views/home.html
+++ b/views/home.html
@@ -2,9 +2,9 @@
 
 	<div class="content">
 		<h1>Hi, I'm <span>Martin</span> !</h1>
-		<p>A 23 years old student based in Paris studying the internets at <a class="link" href="http://www.hetic.net" target="_blank">Hetic</a> and former intern at <a class="link" href="https://twitter.com/ohwee_agency" target="_blank">Ohwee</a>. I'm currently looking for an internship as a front-end developer and/or project manager from July to October 2016.</p>
+		<p>A 23 years old student based in Paris studying the internets at <a class="link" href="http://www.hetic.net" target="_blank">Hetic</a> and former intern at <a class="link" href="https://twitter.com/ohwee_agency" target="_blank">Ohwee</a>. I'm currently looking for an internship as a front-end developer from July to October 2016.</p>
 
-		<a class="btn icon-download" href="#" target="_blank"><span></span>Download my resume</a>
+		<a class="btn icon-download" href="/files/MARTIN_GOUTRY_RESUME.PDF" target="_blank"><span></span>Download my resume</a>
 	</div>
 
 </div>
