--- a/views/projects.html
+++ b/views/projects.html
@@ -1,1 +1,21 @@
-<h1>Je suis confiant?</h1>
+<div class="projects">
+		<div class="p-container">
+			<div class="project">
+				<img src="img/explore.png" alt="Explore the world">
+				<div class="content">
+					<h2>Explore the world</h2>
+					<p>Explore The World is a web experience that redefines how we should navigate through videos. A selection of Go Pro's best videos from all around the world shown in an amazing 3D gallery.</p>
+					<a class="btn icon-see" href="#" target="_blank"><span></span>See project</a>
+				</div>
+			</div>
+			<div class="project">
+				<img src="img/brico.png" alt="Brico Choc">
+				<div class="content">
+					<h2>Brico-Choc</h2>
+					<p>Brico-Choc is a freelance project, I was the front-end developer on it. This is a e-commerce shop that sells DIY products.</p>
+					<a class="btn icon-see" href="#" target="_blank"><span></span>See project</a>
+				</div>
+			</div>
+		</div>
+		
+</div>
