--- a/views/skills.html
+++ b/views/skills.html
@@ -7,11 +7,11 @@
 		</div>
 		<div class="skill">
 			<h2>Back-End</h2>
-			<p>Node.js, Wordpress</p>
+			<p>Node.js (Express, Socket.io, MongoDB), Wordpress</p>
 		</div>
 		<div class="skill">
 			<h2>Others</h2>
-			<p>Github, Adobe CC, Sketch</p>
+			<p>Github, Adobe CC (Photoshop, Illustrator, inDesign), Sketch</p>
 		</div>
 	</div>
 	
