--- a/sass/helpers/_base.scss
+++ b/sass/helpers/_base.scss
@@ -17,7 +17,6 @@ body {
 	width:90%;
 	height:100%;
 	margin: 0 auto;
-	overflow: hidden;
 }
 
 .content {
@@ -58,7 +57,13 @@ body {
 nav {
 	height:7%;
 	padding-top:2%;
+
 	span {
+
+		a {
+			text-decoration: none;
+			color:white;
+		}
 		margin-right:70px;
 		font-family: $archive;
 		font-size: 60px;
