--- a/sass/views/_contact.scss
+++ b/sass/views/_contact.scss
@@ -56,11 +56,6 @@
 				font-size: 16px;
 				display: inline-block;
 
-				&:before {
-					color:$grey;
-					vertical-align: middle;
-					margin-right:30px;
-				}
 
 				&:first-child {
 					margin-right:100px;
@@ -70,6 +65,18 @@
 					text-decoration: none;
 					color:inherit;
 					display: inline-block;
+
+					&:before {
+						color:$grey;
+						vertical-align: middle;
+						margin-right:30px;
+					}
+
+					&:hover {
+						&:before {
+							color:$green;
+						}
+					}
 				}
 			}
 		}
